<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_stop"
        android:visible="false"/>
    <item
        android:id="@+id/action_dump"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_dump" />
    <item
        android:id="@+id/action_license"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_license" />
</menu>